Change default port to :9000 + display port in HTML
Old default port :7000 seemed to be already used by something else on
macOS.

Dynamicall display the port number in the HTML file.

--- a/server-json/static/index.html
+++ b/server-json/static/index.html
@@ -27,7 +27,7 @@
 <body class="container">
   <h1>API Collaborateurs <small>(Documentation)</small></h1>
 
-  <p>URL du serveur : <code>http://localhost:7000</code></p>
+  <p>URL du serveur : <code>http://localhost:{APP_PORT}</code></p>
 
   <hr>
 
